--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -2,21 +2,14 @@
 % to understand how to enter references in bibtex format
 % you can find already prepared entries for most of the articles
 
-@book{jain,
-    author    = {Raj Jain},
-    title     = {Art of Computer Systems Performance Analysis: Techniques for Experimental Design Measurements Simulation and Modeling},
-    publisher = {John Wiley \& Sons},
-    edition  = {2nd},
-    year      = 2015,
-    month    = {March}
+@inproceedings{freeh2005exploring,
+  title={Exploring the energy-time tradeoff in mpi programs on a power-scalable cluster},
+  author={Freeh, Vincent W and Pan, Feng and Kappiah, Nandini and Lowenthal, David K and Springer, Robert},
+  booktitle={19th IEEE International Parallel and Distributed Processing Symposium},
+  pages={4a--4a},
+  year={2005},
+  organization={IEEE}
 }
-
-@misc{doebase,
-title= {Package ‘DoE.base’}, 
-author = {Ulrike Groemping and Boyko Amarov and Hongquan Xu}, 
-year= 2016,
-howpublished = {\url{https://cran.r-project.org/web/packages/DoE.base/DoE.base.pdf}},
-note = {Accessed: 2016-04-24}}
 
 @inproceedings{laurenzano2011reducing,
   title={Reducing energy usage with memory and computation-aware dynamic frequency scaling},
@@ -27,11 +20,51 @@ note = {Accessed: 2016-04-24}}
   organization={Springer}
 }
 
-@inproceedings{freeh2005using,
-  title={Using multiple energy gears in MPI programs on a power-scalable cluster},
-  author={Freeh, Vincent W and Lowenthal, David K},
-  booktitle={Proceedings of the tenth ACM SIGPLAN symposium on Principles and practice of parallel programming},
-  pages={164--173},
-  year={2005},
-  organization={ACM}
+@inproceedings{spiliopoulos2012power,
+  title={Power-Sleuth: A Tool for Investigating Your Program's Power Behavior},
+  author={Spiliopoulos, Vasileios and Sembrant, Andreas and Kaxiras, Stefanos},
+  booktitle={2012 IEEE 20th International Symposium on Modeling, Analysis and Simulation of Computer and Telecommunication Systems},
+  pages={241--250},
+  year={2012},
+  organization={IEEE}
 }
+
+@incollection{schnorr2013visualizing,
+  title={Visualizing More Performance Data Than What Fits on Your Screen},
+  author={Schnorr, Lucas M and Legrand, Arnaud},
+  booktitle={Tools for High Performance Computing 2012},
+  pages={149--162},
+  year={2013},
+  publisher={Springer}
+}
+
+@inproceedings{millani2016fr,
+author = {Millani, Luis Felipe and Schnorr, Lucas Mello},
+title={Computation-Aware Dynamic Frequency Scaling: Parsimonious Evaluation of the Time-Energy Trade-off Using Design of Experiments},
+year={2016},
+booktitle={3rd International Workshop on Reproducibility in Parallel Computing (REPPAR)}
+}
+
+@book{jain1991art,
+  title={Art of Computer Systems Performance Analysis: Techniques For Experimental Design Measurements Simulation and Modeling},
+  author={Jain, R.},
+  isbn={9781118858424},
+  year={1991},
+  publisher={Wiley}
+}
+
+@inproceedings{treibig2010likwid,
+  title={Likwid: A lightweight performance-oriented tool suite for x86 multicore environments},
+  author={Treibig, Jan and Hager, Georg and Wellein, Gerhard},
+  booktitle={2010 39th International Conference on Parallel Processing Workshops},
+  pages={207--216},
+  year={2010},
+  organization={IEEE}
+}
+
+@misc{doebase,
+title= {Package ‘DoE.base’}, 
+author = {Ulrike Groemping and Boyko Amarov and Hongquan Xu}, 
+year= 2016,
+howpublished = {\url{https://cran.r-project.org/web/packages/DoE.base/DoE.base.pdf}},
+note = {Accessed: 2016-04-24}}
