Escrevendo alguns conceitos basicos sobre balanceamento de carga e arrumando o capítulo que fala sobre os trabalhos relacionados

--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -68,3 +68,70 @@ author = {Ulrike Groemping and Boyko Amarov and Hongquan Xu},
 year= 2016,
 howpublished = {\url{https://cran.r-project.org/web/packages/DoE.base/DoE.base.pdf}},
 note = {Accessed: 2016-04-24}}
+
+@book{pacheco2011introduction,
+  title={An Introduction to Parallel Programming},
+  author={Pacheco, P.},
+  isbn={9780080921440},
+  series={An Introduction to Parallel Programming},
+  url={https://books.google.com.br/books?id=SEmfraJjvfwC},
+  year={2011},
+  publisher={Elsevier Science}
+}
+
+@article{Roth1997,
+author = {Roth, Gerald and Mellor-crummey, John and Kennedy, Ken and Brickner, R Gregg},
+number = {November},
+title = {{Compiling Stencils in High Performance Fortran}},
+year = {1997}
+}
+
+@inproceedings{addison2009openmp,
+  title={OpenMP 3.0 tasking implementation in OpenUH},
+  author={Addison, Cody and LaGrone, James and Huang, Lei and Chapman, Barbara},
+  booktitle={Open64 Workshop at CGO},
+  volume={2009},
+  year={2009}
+}
+
+@article{Krause2016,
+author = {Krause, Arthur Mittmann and Moro, Gabriel Bronzatti and Schnorr, Lucas Mello},
+pages = {14--17},
+title = {{An{\'{a}}lise de Desempenho da Multiplica{\c{c}}{\~{a}}o de Matrizes por Strassen contra o M{\'{e}}todo Tradicional}},
+year = {2016},
+publisher={XIV Workshop de Processamento Paralelo e Distribuído}
+}
+
+@article{Li2005,
+abstract = {Although intensive work has been done in the area of load balancing, the grid computing environment is different from the traditional parallel systems, which prevents existing load balancing schemes from benefiting large-scale parallel applications. This paper provides a survey of the existing solutions and new efforts in load balancing to address the new challenges in grid computing. We classify the surveyed approaches into three categories: resource-aware repartition, divisible load theory and prediction based schemes.},
+author = {Li, Yawei and Lan, Zhiling},
+isbn = {3-540-24127-2, 978-3-540-24127-0},
+issn = {03029743},
+journal = {Computational and Information Science},
+pages = {280--285},
+title = {{A survey of load balancing in grid computing}},
+url = {http://www.springerlink.com/index/4m49u0mh1l8bntgk.pdf},
+year = {2005}
+}
+
+@book{chandra2001parallel,
+  title={Parallel Programming in OpenMP},
+  author={Chandra, R.},
+  isbn={9781558606715},
+  lccn={00043828},
+  series={High performance computing},
+  url={https://books.google.com.br/books?id=vuAY5C5C1W0C},
+  year={2001},
+  publisher={Morgan Kaufmann Publishers}
+}
+
+@article{Kitchenham2007,
+author = {Kitchenham, Barbara and Charters, Stuart},
+doi = {10.1145/1134285.1134500},
+isbn = {1595933751},
+issn = {00010782},
+journal = {Engineering},
+title = {{Guidelines for performing Systematic Literature reviews in Software Engineering Version 2.3}},
+volume = {45},
+year = {2007}
+}
