Comportamento de aplicações com referencias - pep

--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -135,3 +135,14 @@ title = {{Guidelines for performing Systematic Literature reviews in Software En
 volume = {45},
 year = {2007}
 }
+
+@book{jesshope2006advances,
+  title={Advances in Computer Systems Architecture: 11th Asia-Pacific Conference, ACSAC 2006, Shanghai, China, September 6-8, 2006, Proceedings},
+  author={Jesshope, C. and Egan, C.},
+  isbn={9783540400561},
+  lccn={2006931938},
+  series={LNCS sublibrary: Theoretical computer science and general issues},
+  url={https://books.google.com.br/books?id=0IY7LW5J4JgC},
+  year={2006},
+  publisher={Springer}
+}
